# mlops2025w_142201019

./: dummy1.py  dummy2.py  dummy3.py  dummy4.py  dummy5.py  file3.txt  file5.txt  readme.md
assignment/assignment2/src/: calculator.py  utils.py
assignments/assignment_4/: .gitignore  142201019.ipynb  pyproject.toml
assignments/assignment_5/: pyproject.toml  q1.py  q2.py  q3.py  q4.py
assignments/assignment_6/: .gitignore  drift_report.md  sol.ipynb
class/week-10/: cifar100_wandb_hf.ipynb
class/week-11/: mlops_wandb_monitoring_lab.ipynb
class/week-3/: add.sh  add_rev.sh  output.txt
class/week-4/Titanic_survival/: .gitignore  classification.ipynb  output.ipynb  pyproject.toml
class/week-6/app/: main.py
class/week-6/artifacts/iris-rf-v8/: model.pkl
class/week-6/wandb/run-20251021_094715-ejudc813/files/: requirements.txt
class/week-6/wandb/run-20251021_094817-bmm125t8/: run-bmm125t8.wandb
class/week-6/wandb/run-20251021_094817-bmm125t8/files/: wandb-metadata.json
class/week-6/wandb/run-20251021_101014-p9ixm4pv/: run-p9ixm4pv.wandb
class/week-6/wandb/run-20251021_101014-p9ixm4pv/files/: wandb-metadata.json
class/week-6/wandb/run-20251021_101427-7shs3oo3/: run-7shs3oo3.wandb
class/week-6/wandb/run-20251021_233950-sy59ellj/: run-sy59ellj.wandb
class/week-8/: compare_models.py  train.py
class/week-9/: code.ipynb  model.pkl
class/week-9/app/: Dockerfile  requirements.txt
class/week-9/artifacts/iris-rf-v0/: model.pkl
class/week-9/wandb/run-20251021_094715-ejudc813/: run-ejudc813.wandb
docs/: usage.md
src/: calculator.py  utils.py
(+9 files in other folders)
