[project]
name = "assignment-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pymongo>=4.15.1",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.43",
    "ucimlrepo>=0.0.7",
]
