[project]
name = "assignment-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "snorkel>=0.10.0",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "wandb>=0.22.2",
]
